# tinyml

./: .gitignore  CMakeLists.txt  README.md  commands.txt  hello.cpp
decisions/: where-this-is-going.md
include/: animal.h  linear_regression.h  loss.h  matrix.h  optimizer.h  otpimizer.h  random_gen.h  tensor.h  tensor.tpp
src/: animal.cpp  linear_regression.cpp  loss.cpp  main.cpp  matrix.cpp  random_gen.cpp
tests/: tensor.cpp
